Bug 158801 - CRASH: after pressing return a few times
Summary: CRASH: after pressing return a few times
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium critical
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.8.0 target:24.2.3
Keywords: bibisected, bisected, regression
: 158343 (view as bug list)
Depends on:
Blocks: Crash DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2023-12-21 07:49 UTC by Xisco Faulí
Modified: 2024-04-04 08:34 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (30.86 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-02-28 07:52 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-12-21 07:49:31 UTC
Steps to reproduce:
1. Open attachment 108606 [details] from bug 60342
2. Press return 10 times

-> LibreOffice crashes after pressing return 4-5 times

Reproduced in

Version: 24.2.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 0034d2ab9382da86340738137218791a4ccc9c90
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: fr-FR (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-12-21 07:50:20 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.com>	2023-11-29 08:35:35 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2023-11-29 09:57:41 +0100
commit ce2fc5eb29b4e252993b549dee002fa8948c8386 (patch)
tree 6b84cc1b392f7e458d90ae2307a6f16f77911b58
parent 2bf8231ab5709f0d7577d6da53f50bc7f0b65079 (diff)
tdf#158341 sw floattable: fix layout loop when fly is below the body frame

Bisected with: bibisect-linux64-24.2
Comment 2 Miklos Vajna 2024-02-28 07:52:17 UTC
Created attachment 192841 [details]
Minimal reproducer

The original bugdoc has 44 pages, and pages 2..44 contain a single multi-page floating table. This is a good stress-test, but it's quite hard to debug.

I attach a simpler (still 8 pages) document that crashes with the same backtrace, but should be easier to debug for a mere mortal like me. :-)
Comment 3 Commit Notification 2024-02-29 10:40:15 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/186de7178c6065e1de13fd216b46ac9b716e44c5

tdf#158801 sw floattable: fix crash with headers and interactive editing

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gabor Kelemen (Collabora) 2024-03-08 20:40:16 UTC
*** Bug 158343 has been marked as a duplicate of this bug. ***
Comment 5 stragu 2024-04-03 21:44:28 UTC
Crashed in 24.2.2.2 with minimal reproducer, no crash report.

Verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f2482fd96eff00b806fae385096531f63f5f2bf5
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded
Comment 6 Commit Notification 2024-04-04 08:34:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/20de432fa4e6f59476e17c4ced216825f6bbeb80

tdf#158801 sw floattable: fix crash with headers and interactive editing

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.